src/app/components/modal/modal.component.scss
.modal {
    background: #fff;
    border-radius: 8px;
    box-shadow: 0 2px 8px #333;
    min-width: 320px;
    position: fixed;
    left: 50%;
    padding: 24px;
    top: 50%;
    transform: translate(-50%, -50%);

    min-width: 320px;
    max-height: 90vmax;
    overflow-y: scroll;
    z-index: 1;
}

.overlay {
    background: #000;
    height: 100vh;
    left: 0;
    opacity: 0.5;
    position: fixed;
    top: 0;
    width: 100vw;
}

